Show error in ui in case if the response throws error.

--- a/app/views/offers/index.html.haml
+++ b/app/views/offers/index.html.haml
@@ -27,3 +27,6 @@
         %td= image_tag offer['thumbnail']['lowres'], class: 'thumbnail'
 - else
   .no_offers No offers
+
+- if !@errors.nil?
+  .error= @errors
